--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Cadastro de Gift Card</h1>
+<h1>Cadastro de Action Figure</h1>
 <hr>
 <form action="/actionfigure/insertactionfigure" method="post">
         <div class="form-control">
@@ -10,13 +10,13 @@
           <input type="text"  name="tipo" class="form-control" id="tipo" aria-describedby="tipoHelp">          
         </div>
         <div class="mb-3">
-            <label for="preco" class="form-label">preco</label>
+            <label for="preco" class="form-label">Valor</label>
             <input type="text" name="preco" class="form-control" id="preco">
           </div>
         <button type="submit" class="btn btn-primary" >Cadastrar</button>
       </form>
 
-      <a href="/actionfigures/"> actionfigures cadastrados</a>
+      <a href="/actionfigures/"> Action Figures cadastradas</a>
 
-      <a href="/busca">Buscar actionfigure cadastrada</a>
+      <a href="/busca">Buscar Action Figure cadastrada</a>
 </div>
