--- a/views/actionfigure.handlebars
+++ b/views/actionfigure.handlebars
@@ -3,9 +3,9 @@
 <h1> {{listaractionfigure.nome}} </h1>
 
 
-<p>nome: {{listaractionfigure.tipo}} </p>
+<p>Nome: {{listaractionfigure.tipo}} </p>
 
-<p>preco:  {{listaractionfigure.preco}}  </p>
+<p>Valor:  {{listaractionfigure.preco}}  </p>
  
 <a href="/actionfigure/edit/{{listaractionfigure.id}}"> EDITAR</a>
 
