--- a/views/actionfigures.handlebars
+++ b/views/actionfigures.handlebars
@@ -4,7 +4,7 @@
     {{#each listar}}
 
     <strong>#{{this.id}} </strong> - 
-    Nome: <a href="/actionfigure/{{this.id}}"> {{nome}} </a> - tipo: {{tipo}} - preco {{preco}} <br>
+    Nome: <a href="/actionfigure/{{this.id}}"> {{nome}} </a> - Tipo: {{tipo}} - Valor {{preco}} <br>
 
     {{/each}}
     </div>
