--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -4,19 +4,19 @@
 <form action="/alterar/updateactionfigure" method="POST"> 
 <div class="form control">
     <input type="hidden" name="id" id="id" value="{{actionfigure.id}}">
-    <label for="tipo">tipo</label>
+    <label for="tipo">Tipo</label>
     <input type="text" name="tipo" placeholder="Digite aqui o tipo"
      value="{{actionfigure.tipo}}">
 </div>
 
 <div class="form control">
-    <label for="nome">nome</label>
+    <label for="nome">Nome</label>
     <input type="text" name="nome" placeholder="Digite aqui o nome do actionfigure"
      value="{{actionfigure.nome}}">
 </div>
 
 <div class="form control">
-    <label for="preco">preco</label>
+    <label for="preco">Valor</label>
     <input type="text" name="preco" placeholder="Digite aqui o preco do actionfigure" 
     value="{{actionfigure.preco}}">
 </div>
