--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<h1> Editar actionfigure</h1>
+<h1> Editar informações Da Action Figure</h1>
 <hr>
 
 <form action="/alterar/updateactionfigure" method="POST"> 
